first version working

--- a/sannbox.ipynb
+++ b/sannbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,57 +38,27 @@
     "    return merged_df.sort(\"Date\")\n",
     "\n",
     "# For a single ticker\n",
-    "df_single = load_yahoo_data(\"AAPL\")\n",
-    "\n",
-    "# For multiple tickers\n",
-    "df_multiple = load_yahoo_data([\"AAPL\", \"GOOGL\", \"MSFT\"])"
+    "df_single = load_yahoo_data(\"AAPL\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (10_981, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Date</th><th>AAPL</th></tr><tr><td>datetime[ns, America/New_York]</td><td>f64</td></tr></thead><tbody><tr><td>1980-12-12 00:00:00 EST</td><td>0.099058</td></tr><tr><td>1980-12-15 00:00:00 EST</td><td>0.09389</td></tr><tr><td>1980-12-16 00:00:00 EST</td><td>0.086999</td></tr><tr><td>1980-12-17 00:00:00 EST</td><td>0.089152</td></tr><tr><td>1980-12-18 00:00:00 EST</td><td>0.091737</td></tr><tr><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2024-06-28 00:00:00 EDT</td><td>210.619995</td></tr><tr><td>2024-07-01 00:00:00 EDT</td><td>216.75</td></tr><tr><td>2024-07-02 00:00:00 EDT</td><td>220.270004</td></tr><tr><td>2024-07-03 00:00:00 EDT</td><td>221.550003</td></tr><tr><td>2024-07-05 00:00:00 EDT</td><td>226.339996</td></tr></tbody></table></div>"
-      ],
       "text/plain": [
-       "shape: (10_981, 2)\n",
-       "┌────────────────────────────────┬────────────┐\n",
-       "│ Date                           ┆ AAPL       │\n",
-       "│ ---                            ┆ ---        │\n",
-       "│ datetime[ns, America/New_York] ┆ f64        │\n",
-       "╞════════════════════════════════╪════════════╡\n",
-       "│ 1980-12-12 00:00:00 EST        ┆ 0.099058   │\n",
-       "│ 1980-12-15 00:00:00 EST        ┆ 0.09389    │\n",
-       "│ 1980-12-16 00:00:00 EST        ┆ 0.086999   │\n",
-       "│ 1980-12-17 00:00:00 EST        ┆ 0.089152   │\n",
-       "│ 1980-12-18 00:00:00 EST        ┆ 0.091737   │\n",
-       "│ …                              ┆ …          │\n",
-       "│ 2024-06-28 00:00:00 EDT        ┆ 210.619995 │\n",
-       "│ 2024-07-01 00:00:00 EDT        ┆ 216.75     │\n",
-       "│ 2024-07-02 00:00:00 EDT        ┆ 220.270004 │\n",
-       "│ 2024-07-03 00:00:00 EDT        ┆ 221.550003 │\n",
-       "│ 2024-07-05 00:00:00 EDT        ┆ 226.339996 │\n",
-       "└────────────────────────────────┴────────────┘"
+       "datetime.datetime(1980, 12, 15, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='America/New_York'))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_single"
+    "df_single['Date'][1]"
    ]
   }
  ],
